[W-13] Add Localization Logic * https://hotsunchip.tistory.com/13

--- a/src/utils/localization/locales/en/common.json
+++ b/src/utils/localization/locales/en/common.json
@@ -1,10 +1,4 @@
 {
   "home": "Home",
-  "about": "About",
-  "feature": "Features",
-  "faq": "FAQs",
-  "document": "Guide",
-  "download": "Download",
-  "contact": "Contact",
-  "login": "Log In"
+  "about": "About"
 }
