--- a/src/utils/localization/locales/ja/common.json
+++ b/src/utils/localization/locales/ja/common.json
@@ -1,10 +1,4 @@
 {
   "home": "ホーム",
-  "about": "概要",
-  "feature": "機能",
-  "faq": "よくある質問",
-  "document": "ガイド",
-  "download": "ダウンロード",
-  "contact": "業務連絡",
-  "login": "ログイン"
+  "about": "概要"
 }
