--- a/src/utils/localization/locales/ko/common.json
+++ b/src/utils/localization/locales/ko/common.json
@@ -1,10 +1,4 @@
 {
   "home": "홈",
-  "about": "어바웃",
-  "feature": "기능",
-  "faq": "자주 묻는 질문",
-  "document": "가이드 문서",
-  "download": "다운로드",
-  "contact": "협업문의",
-  "login": "로그인"
+  "about": "어바웃"
 }
